# api/http/handler_medical_records.go
@@ -3,6 +3,7 @@ package http
 import (
 	"context"
 
+	"github.com/danielgtaylor/huma/v2"
 	"openhealth/internal/domain"
 )
 
@@ -20,6 +21,32 @@ func (s *Server) CreateMedicalRecordHandler(ctx context.Context, input *CreateMe
 
 	resp := &CreateMedicalRecordResponse{}
 	resp.Body.MedicalRecord = *record
+
+	return resp, nil
+}
+
+func (s *Server) GetMedicalRecordByIDHandler(ctx context.Context, input *GetMedicalRecordByIDInput) (*GetMedicalRecordByIDResponse, error) {
+	record, err := s.MedicalRecordSVC.GetMedicalRecordByID(ctx, input.MedicalRecordID)
+	switch err {
+	case nil:
+		resp := &GetMedicalRecordByIDResponse{}
+		resp.Body.MedicalRecord = *record
+		return resp, nil
+	case domain.MedicalRecordNotFoundError:
+		return nil, huma.Error404NotFound("medical record not found")
+	default:
+		return nil, err
+	}
+}
+
+func (s *Server) GetMedicalRecordsByAccountIDHandler(ctx context.Context, input *GetMedicalRecordsByAccountIDInput) (*GetMedicalRecordsByAccountIDResponse, error) {
+	records, err := s.MedicalRecordSVC.GetMedicalRecordsByAccountID(ctx, input.AccountID)
+	if err != nil {
+		return nil, err
+	}
+
+	resp := &GetMedicalRecordsByAccountIDResponse{}
+	resp.Body.MedicalRecords = records
 
 	return resp, nil
 }
