# api/http/handler_nurses.go
@@ -3,6 +3,7 @@ package http
 import (
 	"context"
 
+	"github.com/danielgtaylor/huma/v2"
 	"openhealth/internal/domain"
 )
 
@@ -18,6 +19,20 @@ func (s *Server) CreateNurseHandler(ctx context.Context, input *CreateNurseInput
 	resp.Body.Nurse = *nurse
 
 	return resp, nil
+}
+
+func (s *Server) GetNurseByIDHandler(ctx context.Context, input *GetNurseByIDInput) (*GetNurseByIDResponse, error) {
+	nurse, err := s.NurseSVC.GetNurseByID(ctx, input.NurseID)
+	switch err {
+	case nil:
+		resp := &GetNurseByIDResponse{}
+		resp.Body.Nurse = *nurse
+		return resp, nil
+	case domain.NurseNotFoundError:
+		return nil, huma.Error404NotFound("nurse not found")
+	default:
+		return nil, err
+	}
 }
 
 func (s *Server) CreateNurseToHospitalAssignmentHandler(ctx context.Context, input *CreateNurseToHospitalAssignmentInput) (*CreateNurseToHospitalAssignmentResponse, error) {
